PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Recognition_Period_Qtr__c.field-meta.xml
<CustomField>
    <fullName>Recognition_Period_Qtr__c</fullName>
    <label>Recognition Period - Qtr</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Q1</fullName>
            </value>
            <value>
                <fullName>Q2</fullName>
            </value>
            <value>
                <fullName>Q3</fullName>
            </value>
            <value>
                <fullName>Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>