PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Reporting_Country_Region_Process_Builder__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Country_Region_Process_Builder__c</fullName>
    <description>Populates region from the process builder PFG Reporting Country</description>
    <inlineHelpText>Populates region from the process builder PFG Reporting Country</inlineHelpText>
    <label>Reporting Country/Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>