PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Residual_GP_Portion__c.field-meta.xml
<CustomField>
    <fullName>Residual_GP_Portion__c</fullName>
    <label>Residual - GP Portion</label>
    <precision>18</precision>
    <scale>11</scale>
    <type>Percent</type>
</CustomField>