PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/RFP_Submitted__c.field-meta.xml
<CustomField>
    <fullName>RFP_Submitted__c</fullName>
    <label>Required Submission Date</label>
    <type>Date</type>
</CustomField>