PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/RTL__c.field-meta.xml
<CustomField>
    <fullName>RTL__c</fullName>
    <inlineHelpText>Check if this opportunity is on the Restricted Trading List</inlineHelpText>
    <label>RTL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>