PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Secondary_CRM__c.field-meta.xml
<CustomField>
    <fullName>Secondary_CRM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary CRM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>