PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Settlement_Price__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Price__c</fullName>
    <label>Settlement Price</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day-ahead Market</fullName>
            </value>
            <value>
                <fullName>Real-time Market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>