PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Share_with_PFG_Platform__c.field-meta.xml
<CustomField>
    <fullName>Share_with_PFG_Platform__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this checkbox is checked, all PFG Activity records related to this Opportunity will be shared with Platform Users.</inlineHelpText>
    <label>Share with PFG Platform Users</label>
    <type>Checkbox</type>
</CustomField>