PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Size_Discount__c.field-meta.xml
<CustomField>
    <fullName>Size_Discount__c</fullName>
    <description>Discount given due to the size of the commitment</description>
    <inlineHelpText>Discount given due to the size of the commitment</inlineHelpText>
    <label>Size Discount</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>