PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Sleeve__c.field-meta.xml
<CustomField>
    <fullName>Sleeve__c</fullName>
    <description>To help distinguish which investment group the account will place their capital.</description>
    <inlineHelpText>Identify the investment sleeve the investor will be in.  If a specific Fund sleeve is not available, please contact your system admin.</inlineHelpText>
    <label>Sleeve</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>CR</fullName>
            </value>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>A(CR)</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>D(CR)</fullName>
            </value>
            <value>
                <fullName>A(ER)</fullName>
            </value>
            <value>
                <fullName>C(ER)</fullName>
            </value>
            <value>
                <fullName>Main</fullName>
            </value>
            <value>
                <fullName>Parallel</fullName>
            </value>
            <value>
                <fullName>1 (Europe)</fullName>
            </value>
            <value>
                <fullName>1-A (Europe)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>