PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/SMP_Primary__c.field-meta.xml
<CustomField>
    <fullName>SMP_Primary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SMP Primary</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>