PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Soft_Decline_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Soft_Decline_Follow_Up_Date__c</fullName>
    <description>Date used to set the re-engagement Task and email for Soft Declines</description>
    <inlineHelpText>Date used to set the re-engagement Task and email for Soft Declines</inlineHelpText>
    <label>Soft Decline Follow Up Date</label>
    <type>Date</type>
</CustomField>