PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Soft_Decline_Notes__c.field-meta.xml
<CustomField>
    <fullName>Soft_Decline_Notes__c</fullName>
    <description>Notes describing the Soft Decline Reasons.</description>
    <inlineHelpText>Notes describing the Soft Decline Reasons.</inlineHelpText>
    <label>Soft Decline Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>