PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Sub_Industry__c</fullName>
    <description>Strategic initiatives</description>
    <label>Sub-Industry</label>
    <length>20</length>
    <type>Text</type>
</CustomField>