PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Sub_Investor_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sub_Investor_Amount__c</fullName>
    <description>only used when an investor splits their commitment.</description>
    <inlineHelpText>only used when an investor splits their commitment.</inlineHelpText>
    <label>Sub-Investor Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>