PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/TAD_ID__c.field-meta.xml
<CustomField>
    <fullName>TAD_ID__c</fullName>
    <description>BRP Used Field to track long term contracts of 25 - 30 years on opportunities. TAD, it is a number generated by the risk group that would be helpful for them to filter the deals by, it identifies very long term deals.</description>
    <externalId>true</externalId>
    <inlineHelpText>TAD, it is a number generated by the risk group to filter the deals by, it identifies very long term deals.</inlineHelpText>
    <label>TAD ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>