PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Tax_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID_Number__c</fullName>
    <label>Tax ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>