PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Third_Party_BAM__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_BAM__c</fullName>
    <formula>if( 
ispickval(Source_of_Capital__c,&quot;Operating Partner&quot;),&quot;Third Party&quot;, 
if( 
ispickval(Source_of_Capital__c,&quot;Limited Partners&quot;),&quot;Third Party&quot;, 
if( 
ispickval(Source_of_Capital__c,&quot;Sponsors&quot;),&quot;BAM&quot;, 
if( 
ispickval(Source_of_Capital__c,&quot;Principals&quot;),&quot;BAM&quot;, 
if( 
ispickval(Source_of_Capital__c,&quot;BAM Employees&quot;),&quot;BAM&quot;, 
if( 
ispickval(Source_of_Capital__c,&quot;Cross Commitment&quot;),&quot;&quot;, 
if( 
ispickval(Source_of_Capital__c,&quot;Sub-Investor&quot;),&quot;&quot;, 
if( 
ispickval(Source_of_Capital__c,&quot;None&quot;),&quot;&quot;, 
&quot;&quot; 
))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Third Party/BAM</label>
    <type>Text</type>
</CustomField>