PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Topup__c.field-meta.xml
<CustomField>
    <fullName>Topup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box to identify whether the Opportunity is a top-up investor</description>
    <inlineHelpText>Check box to identify whether the Opportunity is a top-up investor</inlineHelpText>
    <label>Top-up</label>
    <type>Checkbox</type>
</CustomField>