PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Total_Notional_Margin_percentage__c.field-meta.xml
<CustomField>
    <fullName>Total_Notional_Margin_percentage__c</fullName>
    <description>BRP USA field</description>
    <label>Total Notional Margin (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>