PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Total_Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Total_Time_Spent__c</fullName>
    <description>Roll up of total time spent from Activities</description>
    <inlineHelpText>Roll up of total time spent from Activities</inlineHelpText>
    <label>Total Time Spent - Meetings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>