PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Total_Time_Spent_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Total_Time_Spent_Tasks__c</fullName>
    <description>Rolled up for Tasks</description>
    <inlineHelpText>Rolled up for Tasks</inlineHelpText>
    <label>Total Time Spent - Tasks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>