PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Trade_Record__c.field-meta.xml
<CustomField>
    <fullName>Trade_Record__c</fullName>
    <label>Trade Record #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>