PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Unique_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Opportunity_Name__c</fullName>
    <description>Field that will allow us to avoid creating unnecessary duplicate records.</description>
    <inlineHelpText>Field that will allow us to avoid creating unnecessary duplicate records.</inlineHelpText>
    <label>Unique Opportunity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>