PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Updated__c.field-meta.xml
<CustomField>
    <fullName>Updated__c</fullName>
    <formula>IF( Deal_Sheet_Comments_Date_Updated__c &gt;= (Today()-6), &quot;Y&quot;, &quot;&quot;)</formula>
    <label>Updated</label>
    <type>Text</type>
</CustomField>