PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Volume_Size__c.field-meta.xml
<CustomField>
    <fullName>Volume_Size__c</fullName>
    <label>Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MW</fullName>
            </value>
            <value>
                <fullName>MWh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>