PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Weighted_Probablity_AUM__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Probablity_AUM__c</fullName>
    <formula>Amount *  Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Probablity AUM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>