PROD-12-18-19/force-app/main/default/objects/Opportunity/recordTypes/BAC_Overview.recordType-meta.xml
<RecordType>
    <fullName>BAC_Overview</fullName>
    <active>true</active>
    <businessProcess>BAC</businessProcess>
    <description>Record Type to support BAC Sales Process.</description>
    <label>BAC Overview</label>
</RecordType>