PROD-12-18-19/force-app/main/default/objects/Opportunity/recordTypes/BAM.recordType-meta.xml
<RecordType>
    <fullName>BAM</fullName>
    <active>true</active>
    <businessProcess>BAM</businessProcess>
    <description>Brookfield Asset Management Default Opportunity Type</description>
    <label>BAM</label>
</RecordType>