PROD-12-18-19/force-app/main/default/objects/Opportunity/recordTypes/BAM_Finance.recordType-meta.xml
<RecordType>
    <fullName>BAM_Finance</fullName>
    <active>true</active>
    <businessProcess>BAM Finance</businessProcess>
    <description>BAM Finance</description>
    <label>BAM_Finance</label>
</RecordType>