PROD-12-18-19/force-app/main/default/objects/Opportunity/recordTypes/BFIN_General.recordType-meta.xml
<RecordType>
    <fullName>BFIN_General</fullName>
    <active>true</active>
    <businessProcess>BFIN General</businessProcess>
    <description>Sales process for non Infrastructure deals</description>
    <label>BFIN General</label>
</RecordType>