PROD-12-18-19/force-app/main/default/objects/Opportunity/recordTypes/BFIN_Infrastructure.recordType-meta.xml
<RecordType>
    <fullName>BFIN_Infrastructure</fullName>
    <active>true</active>
    <businessProcess>BFIN Infrastructure</businessProcess>
    <description>BFIN Infrastructure Deals</description>
    <label>BFIN Infrastructure</label>
</RecordType>