PROD-12-18-19/force-app/main/default/objects/Opportunity/recordTypes/BIM.recordType-meta.xml
<RecordType>
    <fullName>BIM</fullName>
    <active>true</active>
    <businessProcess>BIM</businessProcess>
    <description>Brookfield Investment Management Default Opportunity Type</description>
    <label>PSG</label>
</RecordType>