PROD-12-18-19/force-app/main/default/objects/Opportunity/recordTypes/BLP.recordType-meta.xml
<RecordType>
    <fullName>BLP</fullName>
    <active>true</active>
    <businessProcess>BLP</businessProcess>
    <description>Brookfield Logistics Properties Default Opportunity Type</description>
    <label>BLP</label>
</RecordType>