PROD-12-18-19/force-app/main/default/objects/Opportunity/recordTypes/BRP_Comm_Dev.recordType-meta.xml
<RecordType>
    <fullName>BRP_Comm_Dev</fullName>
    <active>true</active>
    <businessProcess>BRP Commercial Development</businessProcess>
    <description>Brookfield Renewable Energy Partners</description>
    <label>BRP Comm Dev</label>
</RecordType>