PROD-12-18-19/force-app/main/default/objects/Opportunity/recordTypes/BRP_USA.recordType-meta.xml
<RecordType>
    <fullName>BRP_USA</fullName>
    <active>true</active>
    <businessProcess>BRP USA</businessProcess>
    <label>BRP USA</label>
</RecordType>