PROD-12-18-19/force-app/main/default/objects/Opportunity/recordTypes/Corp_Dev.recordType-meta.xml
<RecordType>
    <fullName>Corp_Dev</fullName>
    <active>true</active>
    <businessProcess>BLP</businessProcess>
    <label>Corp Dev</label>
</RecordType>