PROD-12-18-19/force-app/main/default/objects/Opportunity/recordTypes/PFG.recordType-meta.xml
<RecordType>
    <fullName>PFG</fullName>
    <active>true</active>
    <businessProcess>PFG</businessProcess>
    <description>Private Funds Default Opportunity Type</description>
    <label>PFG</label>
</RecordType>