PROD-12-18-19/force-app/main/default/objects/Opportunity/recordTypes/PFG_Research_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>PFG_Research_Opportunity</fullName>
    <active>true</active>
    <businessProcess>PFG Research</businessProcess>
    <description>Used for PFG Research Opportunities</description>
    <label>PFG Research Opportunity</label>
</RecordType>