PROD-12-18-19/force-app/main/default/objects/Opportunity/recordTypes/Private_Equity.recordType-meta.xml
<RecordType>
    <fullName>Private_Equity</fullName>
    <active>true</active>
    <businessProcess>Private Equity</businessProcess>
    <description>Private Equity Opportunity</description>
    <label>Private Equity</label>
</RecordType>