PROD-12-18-19/force-app/main/default/objects/Opportunity/recordTypes/PSG_Credit_Opportunities.recordType-meta.xml
<RecordType>
    <fullName>PSG_Credit_Opportunities</fullName>
    <active>true</active>
    <businessProcess>PSG BCOF Opportunities</businessProcess>
    <description>PSG Credit Opportunities</description>
    <label>PSG Credit Opportunities</label>
</RecordType>