PROD-12-18-19/force-app/main/default/objects/Opportunity/recordTypes/PSG_Research_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>PSG_Research_Opportunity</fullName>
    <active>true</active>
    <businessProcess>PSG Research</businessProcess>
    <description>PSG consultant research opportunities</description>
    <label>PSG Research Opportunity</label>
</RecordType>