PROD-12-18-19/force-app/main/default/objects/Opportunity/validationRules/BFIN_Estimated_Fee_Endored_Unsigned.validationRule-meta.xml
<ValidationRule>
    <fullName>BFIN_Estimated_Fee_Endored_Unsigned</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND(ISPICKVAL(StageName , &#39;Endorsed &amp; Unsigned&#39;), ISNULL(BFIN_Estimated_Fee__c ) ),true,false)</errorConditionFormula>
    <errorDisplayField>BFIN_Estimated_Fee__c</errorDisplayField>
    <errorMessage>If Stage is &#39;Endorsed &amp; Unsigned&#39; , the BFIN Estimated Fee is required</errorMessage>
</ValidationRule>