PROD-12-18-19/force-app/main/default/objects/Opportunity/validationRules/closed_lost_Opportunity_is_not_editable.validationRule-meta.xml
<ValidationRule>
    <fullName>closed_lost_Opportunity_is_not_editable</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND(PRIORVALUE( IsClosed ) = True, 
            ISPICKVAL (PRIORVALUE(StageName), &quot;Closed Lost&quot;),
            NOT(CONTAINS(RecordType.DeveloperName, &quot;BRP&quot; ))) , True, False)</errorConditionFormula>
    <errorMessage>closed lost Opportunity is not editable</errorMessage>
</ValidationRule>