PROD-12-18-19/force-app/main/default/objects/Opportunity/validationRules/closed_lost_Opportunity_not_change_Statu.validationRule-meta.xml
<ValidationRule>
    <fullName>closed_lost_Opportunity_not_change_Statu</fullName>
    <active>true</active>
    <description>if( AND(ISPICKVAL (PRIORVALUE(StageName), &quot;Closed Lost&quot;),  IsClosed= TRUE),true,false)</description>
    <errorConditionFormula>if(ISPICKVAL (PRIORVALUE(StageName), &quot;Closed Lost&quot;),true,false)</errorConditionFormula>
    <errorMessage>You can not change status of  record that is closed lost</errorMessage>
</ValidationRule>