PROD-12-18-19/force-app/main/default/objects/Opportunity/validationRules/Lost_Reason_Required_PFG_Research_opp.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_Reason_Required_PFG_Research_opp</fullName>
    <active>false</active>
    <errorConditionFormula>if( AND(ISPICKVAL(StageName , &#39;9: Declined (PFG)&#39;), ISPICKVAL( Reason_for_Decline__c , &quot;&quot;) ),true,false)</errorConditionFormula>
    <errorDisplayField>Reason_for_Decline__c</errorDisplayField>
    <errorMessage>If stage is Declined, please enter a Reason for Decline.</errorMessage>
</ValidationRule>