PROD-12-18-19/force-app/main/default/objects/Opportunity/validationRules/PFG_Consultant_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PFG_Consultant_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Has_Consultant__c ,&quot;Yes&quot;),ISBLANK( Consultant__c ))</errorConditionFormula>
    <errorDisplayField>Consultant__c</errorDisplayField>
    <errorMessage>You must enter the Consultant if the Has Consultant? field is &quot;Yes&quot;</errorMessage>
</ValidationRule>