PROD-12-18-19/force-app/main/default/objects/Opportunity/listViews/All_BAC_Opportunities.listView-meta.xml
<ListView>
    <fullName>All_BAC_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.BAC_Overview</value>
    </filters>
    <label>All BAC Opportunities</label>
    <sharedTo>
        <roleAndSubordinates>BAC</roleAndSubordinates>
    </sharedTo>
</ListView>