PROD-12-18-19/force-app/main/default/objects/Opportunity/listViews/All_BFIN_General_Opportunities.listView-meta.xml
<ListView>
    <fullName>All_BFIN_General_Opportunities</fullName>
    <columns>Primary_Deal_Lead__c</columns>
    <columns>BFIN_Deal_Lead__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.BFIN_General,Opportunity.BFIN_Infrastructure</value>
    </filters>
    <filters>
        <field>BFIN_Deal_Lead__c</field>
        <operation>equals</operation>
    </filters>
    <label>BFIN - All General Opportunities</label>
    <sharedTo>
        <group>BFIN_All</group>
    </sharedTo>
</ListView>