PROD-12-18-19/force-app/main/default/objects/Opportunity/listViews/All_BIM_Opportunities.listView-meta.xml
<ListView>
    <fullName>All_BIM_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>PSG_Meeting_Held_Auto__c</columns>
    <columns>Number_of_PSG_Events__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.BIM</value>
    </filters>
    <label>All PSG Opportunities</label>
    <sharedTo>
        <role>BIM</role>
    </sharedTo>
</ListView>