PROD-12-18-19/force-app/main/default/objects/Opportunity/listViews/All_Opportunities_Won_First.listView-meta.xml
<ListView>
    <fullName>All_Opportunities_Won_First</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Classification__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Consultant_CRM__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>Closed_by_CRM__c</columns>
    <columns>Closed_by_Consultant__c</columns>
    <columns>Closed_by_Consultant_CRM__c</columns>
    <columns>Consultant__c</columns>
    <columns>Platform_Consultant_CRM__c</columns>
    <columns>Legal_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.PFG</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.WON</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.AMOUNT</field>
        <operation>notEqual</operation>
        <value>USD 0</value>
    </filters>
    <filters>
        <field>Classification__c</field>
        <operation>equals</operation>
        <value>First</value>
    </filters>
    <filters>
        <field>Topup__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Opportunities - Won - first</label>
    <sharedTo>
        <role>PFG</role>
    </sharedTo>
</ListView>