PROD-12-18-19/force-app/main/default/objects/Opportunity/listViews/BCP_V_Mullane.listView-meta.xml
<ListView>
    <fullName>BCP_V_Mullane</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.PFG</value>
    </filters>
    <filters>
        <field>Investment_Vehicle__c</field>
        <operation>equals</operation>
        <value>BCP V</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Mullane</value>
    </filters>
    <label>BCP V - Mullane</label>
    <sharedTo>
        <group>PFG_Support_Group</group>
        <role>PFG</role>
        <role>PFG_CRM</role>
    </sharedTo>
</ListView>