PROD-12-18-19/force-app/main/default/objects/Opportunity/listViews/BFIN_Brazil_Mandate_Pending.listView-meta.xml
<ListView>
    <fullName>BFIN_Brazil_Mandate_Pending</fullName>
    <booleanFilter>(1 OR 2) AND 3 AND 4 AND 5</booleanFilter>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Deal_Sheet_Comments__c</columns>
    <columns>Deal_Nature__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>BFIN_Estimated_Fee__c</columns>
    <columns>Mandate_Expiry__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Deal_Team__c</columns>
    <columns>Deal_Type__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Office_Country__c</field>
        <operation>equals</operation>
        <value>Brazil</value>
    </filters>
    <filters>
        <field>Deal_Country__c</field>
        <operation>equals</operation>
        <value>Brazil</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>notContain</operation>
        <value>Lauw</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Mandate Pending</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.NAME</field>
        <operation>notContain</operation>
        <value>Other Revenue</value>
    </filters>
    <label>BFIN Brazil - Mandate Pending</label>
    <sharedTo>
        <group>BFIN_Brazil</group>
    </sharedTo>
</ListView>